fix: FE menu drawer scrollbar

--- a/packages/frontend/src/assets/styles/scrollbar.css
+++ b/packages/frontend/src/assets/styles/scrollbar.css
@@ -1,6 +1,8 @@
+/* Chrome, Safari, other webkit based browsers */
+
 *::-webkit-scrollbar {
   display: block;
-  width: 4px;
+  width: 3px;
 }
 
 *::-webkit-scrollbar-button {
@@ -20,6 +22,8 @@
   background-color: #00000040;
   border-radius: 24px;
 }
+
+/* Firefox */
 
 * {
   scrollbar-width: thin;
